<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/hint_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:padding="@dimen/medium_margin"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/hint_weight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_margin"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/hint_ccal">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_margin"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/hint_protein">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_margin"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/hint_fat">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_margin"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/hint_carbon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_margin"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/hint_cost">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_margin"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>
<!--    <EditText-->
<!--        android:id="@+id/editText1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:maxLines="1"-->
<!--        android:inputType="textCapSentences"-->
<!--        android:hint="@string/hint_name" />-->
<!--    <EditText-->
<!--        android:id="@+id/editText2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:maxLines="1"-->
<!--        android:inputType="numberDecimal"-->
<!--        android:hint="@string/hint_weight" />-->

<!--    <EditText-->
<!--        android:id="@+id/editText3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:maxLines="1"-->
<!--        android:inputType="number"-->
<!--        android:hint="@string/hint_ccal" />-->

<!--    <EditText-->
<!--        android:id="@+id/editText4"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:inputType="numberDecimal"-->
<!--        android:maxLines="1"-->
<!--        android:hint="@string/hint_protein" />-->

<!--    <EditText-->
<!--        android:id="@+id/editText5"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:maxLines="1"-->
<!--        android:inputType="numberDecimal"-->
<!--        android:hint="@string/hint_fat" />-->

<!--    <EditText-->
<!--        android:id="@+id/editText6"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:inputType="numberDecimal"-->
<!--        android:maxLines="1"-->
<!--        android:hint="@string/hint_carbon" />-->

<!--    <EditText-->
<!--        android:id="@+id/editText7"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:maxLines="1"-->
<!--        android:inputType="numberDecimal"-->
<!--        android:hint="@string/hint_cost" />-->
</LinearLayout>
</ScrollView>